# median-codefest.github.io

./: AIBrainScans.md  AnatomyVR.md  README.md
OculusRift/: CMakeLists.txt
OculusRift/Common/: Win32_GLAppUtil.h  Win32_VulkanAppUtil.h
OculusRift/cmake/: FindConfig.cmake  FindOculus.cmake
OculusRift/meshes/: esophagus.ply
OculusRift/src/: main.cpp  ply_parser.cpp
